# fwi

./: .CMakeLists.txt.swp  .clang-format  .clang-tidy  .gitignore  .main.cpp.swp  .program_output.txt.swp  Build.py  BuildAndRun.py  CMakeCache.txt  CMakeLists.txt  CTestResults.xml  CTestTestfile.cmake  Dockerfile  GtestXMLtoJunitXML.sh  Jenkinsfile  Jenkinsfile-Nightly  Makefile  ReadMe.txt  Readme.txt  Run.py  Test.xml  chi_est_temple.csv  cleanAll  cmake_install.cmake  default.in  imageCreator.py  imageCreator_CMake.py  inputfwi.txt  main.cpp  main.cpp.autosave  main_all.cpp  main_backup.cpp  main_backup_with_small_problem.cpp  main_backup_with_tiny_problem.cpp  main_pre_processing.cpp  main_processing.cpp  main_reader.cpp  main_source.cpp  outputfwi.txt  postProcessing.py  (+11 more)
applications/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
applications/FullFWI/: CMakeLists.txt  main.cpp
applications/finiteDifferencePreProcessing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
applications/finiteDifferenceProcessing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
applications/gradientDescentProcessing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
applications/integralPreProcessing/: CMakeLists.txt  main.cpp
applications/mpiConjugateGradientProcessing/: CMakeLists.txt  main.cpp
applications/openMpGradienDescentProcessing/: CMakeLists.txt  main.cpp
applications/openMpiGradienDescentProcessing/: CMakeLists.txt  main.cpp
applications/preProcessing/: .CMakeLists.txt.swp  CMakeLists.txt  CTestTestfile.cmake  HelpTextPreProcessing.h  Makefile  cmake_install.cmake  main.cpp  main_preProcessing.cpp
applications/processing/: .CMakeLists.txt.swp  CMakeLists.txt  CTestTestfile.cmake  HelpTextProcessing.h  Makefile  cmake_install.cmake  main.cpp  main_processing.cpp
applications/processingOpenCL/: CMakeLists.txt  kernels.cl  main.cpp
applications/processing_mpi/: CMakeLists.txt  main.cpp
applications/randomInversionProcessing/: .CMakeLists.txt.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
applications/stepAndDirectionProcessing/: CMakeLists.txt  main.cpp
applications/unifiedProcessing/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp
doc/: CMakeLists.txt  DoD.docx  Doxyfile.in  FWI_document.tex  Mainpage.dox  Namespaces.dox  code-documentation.txt  readme-installation.txt
doc/ConjugateGradientInversion_implementation/: ConjugateGradientInversion_implementation.out  ConjugateGradientInversion_implementation.tex  ConjugateGradientInversion_implementation.toc
doc/FWITest/: FWITest Setup.docx  TechnicalBreakdownFWI.xml
doc/ProjectDescription(LaTeX)/: PseudoAlgorithmFWI.tex
doc/README (Latex)/: bibliography.bib  main.tex
doc/ToBeFinished/: QTCreator_Project_Guide.tex
doc/VP Project/: FWI.vpp  FWI.vpp.bak_000f  FWI.vpp.bak_001d  FWI.vpp.bak_002d  FWI.vpp.bak_003d  FWI.vpp.bak_004d  FWI.vpp.bak_005d  FWI.vpp.bak_006d
doc/codeStandards/: codeStandards.tex
doc/codeStandards(LaTeX)/: exampleClass.h
doc/diagrams/: ArrowMeaningsForClassDiagrams.plantuml  BuildingProcessOfTheDoxygenDocumentation.plantuml  BuildingProcessOfTheProject.plantuml  BuildingProcessOfTheStaticAnalysisReportFromCppcheck.plantuml  ContinuousIntegrationSystem.plantuml  ProjectOverview.plantuml  StepAndDirectionProcessing.plantuml  UnifiedProcessing.plantuml
doc/documentingStandard/: documentingStandard.tex
doc/how-to-build-run-guide/: BUILD_RUN_DOCUMENT.tex  main.tex
doc/how_to_add_methods/: how_to_add_methods.tex
doc/latex/: main.tex  main_bu1.tex  readme.txt
gui/src/: CMakeLists.txt  Launcher.h  QFWIPostProcess.h  QFWIPreProcess.h  QFWIProcess.h  Qfwi.cpp  extraWindow.qml  fileio.h  main.cpp  main.qml  qml.qrc
libraries/: .CMakeLists.txt.swp  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/CL/: CMakeLists.txt
libraries/core/: CMakeLists.txt
libraries/factory/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/forwardModel/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/include/: CsvReader.h  Inversion.h  InversionConcrete_cpu.h  ProfileInterface.h  calcField.h  communication.h  create_csv_files_for_chi.h  einsum.h  forwardModel.h  forwardModelInterface.h  frequencies_alternate.h  frequencies_group.h  greens_rect_2D_cpu.h  grid_rect_2D.h  helper.h  input_parameters.h  inversion.h  inversionInterface.h  inversion_cpu.h  mat_vec.cl  read_input_fwi_into_vec.h  setup_input_parameters_for_inverse.h  sources_rect_2D.h  variable_structure.h  volField_rect_2D.h  volField_rect_2D_cpu.h
libraries/includeForwardModel/: ProfileCpu.h  calcField.h  communication.h  contraction.h  forwardModel.h  forwardModelInterface.h  frequencies_group.h  greens_rect_2D_cpu.h  grid_rect_2D.h  read_input_fwi_into_vec.h  receivers_rect_2D.h  setupInputParametersForFurtherCalculations.h  sources_rect_2D.h  variable_structure.h  variable_structure.h.autosave  volComplexField_rect_2D.h  volComplexField_rect_2D_cpu.h  volField_rect_2D.h  volField_rect_2D_cpu.h
libraries/inversion/: CMakeLists.txt  CMakeLists.txt.save  CTestTestfile.cmake  Makefile  cmake_install.cmake
libraries/src/: CsvReader.cpp  Inversion.cpp  Inversion.cpp_org  chi.txt  chi_est_temple.txt  chi_visualisation_in_integer_form.cpp  contraction.cpp.autosave  create_csv_files_for_chi.cpp  einsum.cpp  frequencies_alternate.cpp  fwiread.cpp  sources_rect_2D.cpp
libraries/srcForwardModel/: GreensFunctions.cpp  calcField.cpp  communication.cpp  contraction.cpp  forwardModel.cpp  forwardModel.cpp_org  frequencies_group.cpp  greens_rect_2D_cpu.cpp  grid_rect_2D.cpp  helper.cpp  read_input_fwi_into_vec.cpp  receivers_rect_2D.cpp  sources_rect_2D.cpp  volComplexField_rect_2D.cpp  volComplexField_rect_2D_cpu.cpp  volField_rect_2D_cpu.cpp
libraries/stepAndDirectionMethod/: CMakeLists.txt
libraries/utilities/: CMakeLists.txt
tests/unittesting/: CMakeLists.txt  unittest_1.cpp  (+8 more)
(+1007 files in other folders)
