add_subdirectory( preProcessing )
add_subdirectory( finiteDifferencePreProcessing )
add_subdirectory( finiteDifferenceProcessing )
add_subdirectory( processing )
add_subdirectory( randomInversionProcessing )
add_subdirectory( unifiedProcessing )
add_subdirectory( gradientDescentProcessing )
add_subdirectory( stepAndDirectionProcessing )
#if(MPI_FOUND)
#    add_subdirectory( mpiConjugateGradientProcessing )
#endif(MPI_FOUND)
if (OpenMP_CXX_FOUND)
    add_subdirectory( openMpGradienDescentProcessing )
endif(OpenMP_CXX_FOUND)
