include_directories( ${LIBRARY_INCLUDE_DIRS_FINITE_DIFFERENCE_FORWARD_MODEL} )
include_directories( ${LIBRARY_INCLUDE_DIRS_CORE} )

add_executable( FWI_PreProcess_Finite_Difference  main.cpp )
target_link_libraries( FWI_PreProcess_Finite_Difference finite_difference_forward_model_library core_library utilities_library)
install( TARGETS FWI_PreProcess_Finite_Difference DESTINATION bin)