include_directories( ${LIBRARY_INCLUDE_DIRS_FINITE_DIFFERENCE_FORWARD_MODEL} )
include_directories( ${LIBRARY_INCLUDE_DIRS_CORE} )
include_directories(${CMAKE_SOURCE_DIR}/libraries/forwardModel/interface/include)
include_directories(${CMAKE_SOURCE_DIR}/libraries/utilities/include)
include_directories(${CMAKE_SOURCE_DIR}/libraries/performance/include)
include_directories(${CMAKE_SOURCE_DIR}/libraries/io/include)

add_executable( FWI_PreProcess_Finite_Difference  main.cpp )
target_link_libraries( FWI_PreProcess_Finite_Difference finite_difference_forward_model_library core_library io_library performance_library)
install( TARGETS FWI_PreProcess_Finite_Difference DESTINATION bin)
