include_directories( ${LIBRARY_INCLUDE_DIRS_CONJUGATE_GRADIENT_INVERSION} )
include_directories( ${LIBRARY_INCLUDE_DIRS_CORE} )
include_directories( ${LIBRARY_INCLUDE_DIRS_FINITE_DIFFERENCE_FORWARD_MODEL} )
include_directories(${CMAKE_SOURCE_DIR}/libraries/utilities/include)
include_directories(${CMAKE_SOURCE_DIR}/libraries/forwardModel/interface/include)
include_directories(${CMAKE_SOURCE_DIR}/libraries/performance/include)

add_executable( FWI_Process_Finite_Difference main.cpp )
target_include_directories(FWI_Process_Finite_Difference PRIVATE ${CMAKE_SOURCE_DIR}/libraries/inversion/interface/include)
target_link_libraries( FWI_Process_Finite_Difference conjugate_gradient_inversion_library finite_difference_forward_model_library core_library io_library performance_library)
install( TARGETS FWI_Process_Finite_Difference DESTINATION bin)
